# fastapi-simple-rate-limiter

./: .gitignore  LICENSE  README.md  README_KR.md  pyproject.toml  requirements.txt  setup.py
fastapi_simple_rate_limiter/: __init__.py  database.py  exception.py  limiter.py
tests/: test_failed_limiter.py  test_rate_limiter.py
